--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
@@ -68,6 +68,8 @@
         .content-area {
             box-sizing: border-box;
             padding: 1em;
+            height: 90%;
+            overflow-y: scroll;
             select {
                 border-radius: 4px;
                 display: inline-block;
