--- a/source/app/components/wi-export-from-project/wi-export-from-project.html
+++ b/source/app/components/wi-export-from-project/wi-export-from-project.html
@@ -75,8 +75,11 @@
         <div class="right-container">
             <div class='panel panel-default export-right'>
                 <div class='panel-heading' style='display:flex;'>
-                    <h5 style='flex:1;'>Las Files</h5>
-                    <button style="margin:5px 0;padding:0 10px;" class='btn btn-default' title='purge' ng-click="wiExportFromProject.lasFiles.length = 0;">
+                    <h5 style='flex:1;'>Output</h5>
+                    <button style="margin:5px 0 5px 5px;padding:0 10px;" class='btn btn-default' title='purge' ng-click="wiExportFromProject.fileFormatToggle()">
+                        <span>{{wiExportFromProject.fileFormat}}</span>
+                    </button>
+                    <button style="margin:5px 0 5px 5px;padding:0 10px;" class='btn btn-default' title='purge' ng-click="wiExportFromProject.lasFiles.length = 0;">
                         <span class='ti-brush-alt'></span>
                     </button>
                 </div>
