--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100%;
     background-color: white;
+    display: flex;
     .color-blue {
         color: blue
     }
@@ -17,11 +18,14 @@
         border-radius: 5px;
         position: relative;   
         margin-right: 1em;
+        display: flex;
+        flex-direction: column;
         .left-heading {
             display: flex;
             border-bottom: 1px solid #ccc;
             padding: 0px 15px;
             background-color: #eee;
+            // flex-basis:35px;
             h5 {
                 display: inline-block;
             }
@@ -46,6 +50,8 @@
         border-radius: 5px;
         position: relative;
         box-sizing: border-box;  
+        display: flex;
+        flex-direction: column;
         .right-heading {
             padding: 5px 15px;
             display: flex;
@@ -68,8 +74,9 @@
         .content-area {
             box-sizing: border-box;
             padding: 1em;
-            height: 90%;
+            height: 100%;
             overflow-y: scroll;
+            margin: 5px 0px;
             select {
                 border-radius: 4px;
                 display: inline-block;
