--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
@@ -1,6 +1,6 @@
 <div class="zone-template-manager">
     <div class="left-side">
-        <div class="template-tree">
+        <div class="template-tree" style="display: flex; flex-direction: column;">
             <div class='left-heading'>
                 <h5>Templates</h5>
                 <div class="button-area" style="position:relative">
@@ -15,18 +15,20 @@
                     </label>
                 </div>
             </div>
-            <div style='background-color:white;display: flex;padding-left: 7px; border-bottom: 1px solid #ccc;'>
-                <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
-                <input type='text' id="focus" style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;border: none' ng-model="wiZoneTemplateManager.filter"
-                    placeholder="[Search]">
+            <div class="left-tree">
+                <div style='background-color:white;display: flex;padding-left: 7px; border-bottom: 1px solid #ccc; flex-basis:28px;'>
+                    <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
+                    <input type='text' id="focus" style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;border: none' ng-model="wiZoneTemplateManager.filter"
+                        placeholder="[Search]">
+                </div>
+                <wi-scroll id-scroll="'wztmTreeScroll'" style='display:flex;height:79%' up-trigger='wiZoneTemplateManager.upTrigger'
+                    down-trigger='wiZoneTemplateManager.downTrigger'>
+                    <wi-base-treeview name="zoneTemplateManagerTreeview" config="wiZoneTemplateManager.templateConfig" container="wiZoneTemplateManager"
+                        on-click-function="wiZoneTemplateManager.templateClickFunction" filter="{{wiZoneTemplateManager.filter}}"
+                        show-context-menu-function="wiZoneTemplateManager.showTreeContextMenuFunction">
+                    </wi-base-treeview>
+                </wi-scroll>
             </div>
-            <wi-scroll id-scroll="'wztmTreeScroll'" style='flex:1;display:flex;flex-direction:column;height:79%' up-trigger='wiZoneTemplateManager.upTrigger'
-                down-trigger='wiZoneTemplateManager.downTrigger'>
-                <wi-base-treeview name="zoneTemplateManagerTreeview" config="wiZoneTemplateManager.templateConfig" container="wiZoneTemplateManager"
-                    on-click-function="wiZoneTemplateManager.templateClickFunction" filter="{{wiZoneTemplateManager.filter}}"
-                    show-context-menu-function="wiZoneTemplateManager.showTreeContextMenuFunction">
-                </wi-base-treeview>
-            </wi-scroll>
         </div>
     </div>
     <div class="right-side" style="box-sizing:border-box">
@@ -35,7 +37,7 @@
                 Order by: </h5>
             <select ng-init="wiZoneTemplateManager.zoneTemplateOrder='none'" ng-model="wiZoneTemplateManager.zoneTemplateOrder" ng-show="wiZoneTemplateManager.zoneTemplates.length !== 0">
                 <option value="none">None</option>
-                <option value="idTemplate" ng-hide="wiZoneTemplateManager.newTemplate">Template id</option>
+                <option value="idTemplate">Template id</option>
                 <option value="name">Name</option>ng-class
                 <option value="foreground">Foreground</option>
                 <option value="background">Background</option>
@@ -56,7 +58,7 @@
             </div>
         </div>
         <div class="content-area">
-            <div class="zone-area" style="padding-top: 15px">
+            <div class="zone-area">
                 <table class="text-on-table table table-bordered" ng-show="wiZoneTemplateManager.zoneTemplates.length!==0">
                     <thead>
                         <tr>
