--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
@@ -7,7 +7,7 @@
     </style>
     <div class="left-side">
         <div class="template-tree" style="display: flex; flex-direction: column;">
-            <div class='left-heading'>
+            <div class='left-heading' style='flex-basis:40px'>
                 <h5>Zonesets</h5>
                 <div class="button-area" style="position: relative">
                     <label class='btn pull-right' ng-click="wiZoneSetManager.createZoneSet()" ng-disabled="!(wiZoneSetManager.lastSelectedWell || wiZoneSetManager.lastSelectedZoneSet)">
@@ -24,10 +24,10 @@
             <div class="left-tree">
                 <div style='background-color:white;display: flex;padding-left: 7px; border-bottom: 1px solid #ccc; flex-basis:28px;'>
                     <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
-                    <input type='text' id="focus" style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;border: none' ng-model="wiZoneSetManager.filter"
+                    <input type='text' id="wzsmFocus" style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;border: none' ng-model="wiZoneSetManager.filter"
                         placeholder="[Search]">
                 </div>
-                <wi-scroll id-scroll="'wzsmTreeScroll'" style='flex:1;display:flex;flex-direction:column;height: 80%' up-trigger='wiInventory.upTrigger'
+                <wi-scroll id-scroll="'wzsmTreeScroll'" style='flex:1;display:flex;flex-direction:column;height: calc(100% - 68px);' up-trigger='wiInventory.upTrigger'
                     down-trigger='wiInventory.downTrigger'>
                     <wi-base-treeview name="zoneTemplateManagerTreeview" config="wiZoneSetManager.zoneSetConfig" container="wiZoneSetManager"
                         on-click-function="wiZoneSetManager.clickFunction" filter="{{wiZoneSetManager.filter}}" show-context-menu-function="wiZoneSetManager.showTreeContextMenuFunction">
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="right-side" style="box-sizing:border-box">
-        <div class="right-heading">
+        <div class="right-heading" style="flex-basis:40px;">
             <h5 style="margin: 6px; font-weight:bold;display:inline-block" ng-show="wiZoneSetManager.zones.length !== 0">
                 Order by: </h5>
             <select ng-init="wiZoneSetManager.zoneOrder='none'" ng-model="wiZoneSetManager.zoneOrder" ng-show="wiZoneSetManager.zones.length !== 0">
