--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
@@ -4,6 +4,10 @@
     width: 100%;
     height: 100%;
     background-color: white;
+    ::-webkit-input-placeholder {
+       color: #ccc;
+       font-style: italic;
+    }
     .color-blue {
         color: blue
     }
