--- a/source/app/components/wi-zone-manager/wi-zone-manager.html
+++ b/source/app/components/wi-zone-manager/wi-zone-manager.html
@@ -8,7 +8,7 @@
     </style>
     <wi-tabset style="height:100%">
         <wi-tab heading="Zonesets" style="display:flex;flex-direction:row;width:100%">
-            <wi-zone-set-manager></wi-zone-set-manager>
+            <wi-zone-set-manager idwell="wiZoneManager.idwell"></wi-zone-set-manager>
         </wi-tab>
         <wi-tab heading="Templates" style="display:flex;flex-direction:row;width:100%">
             <wi-zone-template-manager></wi-zone-template-manager>
