--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
@@ -35,12 +35,9 @@
         <div class="right-heading" style='flex-basis:40px'>
             <h5 style="margin: 6px; margin-right: 15px; font-weight:bold;display:inline-block" ng-show="wiZoneTemplateManager.zoneTemplates.length !== 0">
                 Order by: </h5>
-            <select ng-init="wiZoneTemplateManager.zoneTemplateOrder='none'" ng-model="wiZoneTemplateManager.zoneTemplateOrder" ng-show="wiZoneTemplateManager.zoneTemplates.length !== 0">
-                <option value="none">None</option>
-                <option value="idTemplate">Template id</option>
-                <option value="name">Name</option>ng-class
-                <option value="foreground">Foreground</option>
-                <option value="background">Background</option>
+            <select ng-init="wiZoneTemplateManager.zoneTemplateOrder='idZoneTemplate'" ng-model="wiZoneTemplateManager.zoneTemplateOrder" ng-show="wiZoneTemplateManager.zoneTemplates.length !== 0">
+                <option value="idZoneTemplate">Zone id</option>
+                <option value="name">Zone name</option>
             </select>
             <div class="button-area">
                 <label title="Apply changes" class='btn' ng-disabled="!wiZoneTemplateManager.zoneTemplateEditted" ng-click="wiZoneTemplateManager.editZoneTemplate()">
