--- a/source/app/components/wi-export-from-inventory/wi-export-from-inventory.html
+++ b/source/app/components/wi-export-from-inventory/wi-export-from-inventory.html
@@ -2,7 +2,7 @@
         <div class="left-container">
             <div class="panel panel-default export-left">
                 <div style='display:flex;' class='panel-heading'>
-                    <h5 style='margin-right:10px;'>Inventory</h5>
+                    <h5 style='margin-right:10px;flex:1;'>Inventory</h5>
                     <!-- <wi-item-dropdown style='flex:1;margin:5px 0;' class='height24px' icon="'project-open-16x16'" on-wi-dropdown-init='wiExportFromInventory.getProjectList'
                         on-item-changed="wiExportFromInventory.projectChanged">
                     </wi-item-dropdown> -->
@@ -29,8 +29,8 @@
                     on-select-function="wiExportFromInventory.selectProjectNode" filter="{{wiExportFromInventory.prjFilter}}">
                 </wi-base-treeview> -->
                 <div style="flex:1;display:flex;padding:0px;" class="panel-body">
-                    <wi-scroll id-scroll="exportTreeScroll" style='flex:1;display:flex;flex-direction:column;' up-trigger='wiExportFromInventory.upTriggerPrj'
-                        down-trigger='wiExportFromInventory.downTriggerPrj'>
+                    <wi-scroll id-scroll="'efiTreeScroll'" style='flex:1;display:flex;flex-direction:column;' up-trigger='wiExportFromInventory.upTrigger'
+                        down-trigger='wiExportFromInventory.downTrigger'>
                         <!-- <wi-base-treeview name="exportTreeview" 
                             config="wiExportFromInventory.projectConfig" 
                             container="wiExportFromInventory" 
@@ -105,7 +105,7 @@
                             size='10'>
                     </form>
                 </div>
-                <ul>
+                <ul style="overflow-x: hidden; overflow-y:auto">
                     <li ng-repeat='file in wiExportFromInventory.lasFiles | filter: wiExportFromInventory.lasFilesFilter'>
                         <a href="{{file.url}}">
                             <i style="font-size: 16px;z-index:1;color:#aaa;" class="fa fa-file"></i>
