--- a/source/app/components/wi-explorer/template/wi-explorer.html
+++ b/source/app/components/wi-explorer/template/wi-explorer.html
@@ -20,8 +20,8 @@
             <span class='curve-data-16x16'></span>
         </label>
         <label class="btn"
-        ng-class='{active:filterBy=="zonesets"}' title='Zoneset'>
-            <input type="radio" name="filterBy" class="display-none" value='zonesets' ng-model="filterBy">
+        ng-class='{active:filterBy=="user_defined"}' title='Zoneset'>
+            <input type="radio" name="filterBy" class="display-none" value='user_defined' ng-model="filterBy">
             <span class='user-define-16x16'></span>
         </label>
         <label class="btn" ng-class='{active: filterBy=="logplots"}' title='Logplot'>
