--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
@@ -42,7 +42,7 @@
                 Order by: </h5>
             <select ng-init="wiZoneSetManager.zoneOrder='idZone'" ng-model="wiZoneSetManager.zoneOrder" ng-show="wiZoneSetManager.zones.length !== 0">
                 <option value="idZone">Zone id</option>
-                <option value="name">Zone name</option>
+                <option value="zone_template.name">Zone name</option>
                 <option value="orderDepth">Depth</option>>
             </select>
             <div class="button-area">
