--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
@@ -60,7 +60,7 @@
                 </label>
             </div>
         </div>
-        <div class="content-area">
+        <div class="content-area" id="zoneScroll">
             <div class="zone-area">
                 <table class="text-on-table table table-bordered" ng-show="wiZoneSetManager.zones.length!==0">
                     <thead>
