--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
@@ -3,7 +3,7 @@
         .zone-set-manager canvas{
             width: 100%;
             height: 26px;
-        }    
+        }
     </style>
     <div class="left-side">
         <div class="template-tree" style="display: flex; flex-direction: column;">
@@ -40,19 +40,29 @@
         <div class="right-heading" style="flex-basis:40px;">
             <h5 style="margin: 6px; font-weight:bold;display:inline-block" ng-show="wiZoneSetManager.zones.length !== 0">
                 Order by: </h5>
-            <select ng-init="wiZoneSetManager.zoneOrder='idZone'" ng-model="wiZoneSetManager.zoneOrder" ng-show="wiZoneSetManager.zones.length !== 0">
+            <select ng-init="wiZoneSetManager.zoneOrder='orderDepth'" ng-model="wiZoneSetManager.zoneOrder" ng-show="wiZoneSetManager.zones.length !== 0">
                 <option value="idZone">Zone id</option>
                 <option value="zone_template.name">Zone name</option>
                 <option value="orderDepth">Depth</option>>
             </select>
             <div class="button-area">
+                <label title="Swap two zones" class='btn' ng-click="wiZoneSetManager.swapTwoZones()" ng-disabled="wiZoneSetManager.getSelectedZones().length!=2">
+                    <i class="ti-arrows-vertical" ng-class="{'color-blue': wiZoneSetManager.getSelectedZones().length==2, 'color-lightgray': wiZoneSetManager.getSelectedZones().length!=2}"></i>
+                </label>
+                <label title="Move Zone up" class='btn' ng-click="wiZoneSetManager.moveZoneUp()" ng-disabled="wiZoneSetManager.getSelectedZones().length==0">
+                    <i class="ti-arrow-up" ng-class="{'color-blue': wiZoneSetManager.getSelectedZones().length!=0, 'color-lightgray': wiZoneSetManager.getSelectedZones().length==0}"></i>
+                </label>
+                <label title="Move Zone down" class='btn' ng-click="wiZoneSetManager.moveZoneDown()" ng-disabled="wiZoneSetManager.getSelectedZones().length==0">
+                    <i class="ti-arrow-down" ng-class="{'color-blue': wiZoneSetManager.getSelectedZones().length!=0, 'color-lightgray': wiZoneSetManager.getSelectedZones().length==0}"></i>
+                </label>
                 <label title="Apply changes" class='btn' ng-click="wiZoneSetManager.editZone()" ng-disabled="!wiZoneSetManager.zoneEditted">
                     <i class="ti-check" ng-class="{'color-blue': wiZoneSetManager.zoneEditted, 'color-lightgray': !wiZoneSetManager.zoneEditted}"></i>
                 </label>
                 <label title="Delete zones" class='btn' ng-click="wiZoneSetManager.showDeleteButtonContextMenuFunction($event, $index)" ng-disabled="wiZoneSetManager.zones.length==0">
                     <i class="ti-close" ng-class="{'color-blue': wiZoneSetManager.zones.length!=0, 'color-lightgray':wiZoneSetManager.zones.length==0}"></i>
                 </label>
-                <label title="Create new zone" class='btn' ng-click="wiZoneSetManager.showCreateButtonContextMenuFunction($event, $index)" ng-disabled="!wiZoneSetManager.lastSelectedZoneSet">
+                <label title="Create new zone" class='btn' ng-click="wiZoneSetManager.showCreateButtonContextMenuFunction($event, $index)"
+                    ng-disabled="!wiZoneSetManager.lastSelectedZoneSet">
                     <i class="ti-plus" ng-class="{'color-blue': wiZoneSetManager.lastSelectedZoneSet, 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet}"></i>
                 </label>
                 <label tilte="Reload zone-list" class='btn' ng-click="wiZoneSetManager.refreshZoneList()" ng-disabled="!wiZoneSetManager.lastSelectedZoneSet">
