--- a/source/app/components/wi-workflow-machine-learning/template/model-params.html
+++ b/source/app/components/wi-workflow-machine-learning/template/model-params.html
@@ -2,7 +2,7 @@
     <div style="padding: 10px;display:flex;flex:1;flex-direction:row;">
         <div style="display:flex;flex-direction:column;flex:0.3;padding:10px;overflow:auto;">
             <form class="form-horizontal">
-                <div class="bordered" style="padding:10px; margin-bottom: 10px" ng-show="!wiWorkflowMachineLearning.workflowConfig.steps[0].disabled">
+                <div class="bordered" style="padding:10px; margin-bottom: 10px" ng-show="!wiWorkflowMachineLearning.workflowConfig.steps[0].disabled" ng-init="wiWorkflowMachineLearning.showParametersAdv=false">
                     <h4 style="text-align: center">Edit infomation model</h4>
                     <div class="form-group">
                         <label class="control-label col-sm-3">Type</label>
@@ -31,6 +31,50 @@
                         </div>
                     </div>
                     <div class='form-group' ng-repeat='param in wiWorkflowMachineLearning.currentModelType.parameters'>
+                        <label ng-if='param.type != "nnconfig"' class="control-label col-sm-3">{{param.name}}</label>
+                        <div ng-if="param.type == 'number'" class='col-sm-9'>
+                            <input style="width: 100%;" class="form-control wi-form-control"
+                                type="number" ng-model="param.value" 
+                                step='{{param.step}}' min="{{param.min}}" max="{{param.max}}"
+                                ng-change='wiWorkflowMachineLearning.saveWorkflow();'>
+                        </div>
+                        <div ng-if="param.type=='select'" class='col-sm-9'>
+                            <ui-select ng-model="param.value" 
+                                ng-change='wiWorkflowMachineLearning.saveWorkflow();'>
+                                <ui-select-match>
+                                    {{param.value.name}}
+                                </ui-select-match>
+                                <ui-select-choices style="width: 100%;" repeat='choice in param.choices'>
+                                    {{choice.name}}
+                                </ui-select-choices>
+                            </ui-select>
+                        </div>
+                        <div ng-if="param.type=='nnconfig'" class='col-sm-12' >
+                            <div class="well container-fluid">
+                                <h4>{{param.name}}</h4>
+                                <label class="control-label col-sm-4">Hidden_layer_sizes</label>
+                                <div class="col-sm-8">
+                                    <input ng-model='param.value.nLayer' type="number"
+                                        ng-change="wiWorkflowMachineLearning.nnConfigNLayerChanged(param.value);wiWorkflowMachineLearning.updateNNConfig();wiWorkflowMachineLearning.saveWorkflow();" 
+                                        class="form-control wi-form-control" min="1">
+                                </div>
+                                <div ng-repeat="layer in param.value.layerConfig">
+                                    <label class="control-label col-sm-4">{{layer.name}}</label>
+                                    <div class="col-sm-8">
+                                        <input class="form-control wi-form-control" ng-model="layer.value" type="number"
+                                            ng-change="wiWorkflowMachineLearning.updateNNConfig();wiWorkflowMachineLearning.saveWorkflow();" min="1">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group" ng-if="wiWorkflowMachineLearning.currentModelType.parametersAdv">
+                        <label class="control-label col-sm-7">Show parametersAdv</label>
+                        <div class="col-sm-1">
+                            <input style="margin-top: 10px" type="checkbox" ng-true-value="true" ng-false-value="false" ng-model="wiWorkflowMachineLearning.showParametersAdv">
+                        </div>
+                    </div>
+                    <div ng-show="wiWorkflowMachineLearning.showParametersAdv" class='form-group' ng-repeat='param in wiWorkflowMachineLearning.currentModelType.parametersAdv'>
                         <label ng-if='param.type != "nnconfig"' class="control-label col-sm-3">{{param.name}}</label>
                         <div ng-if="param.type == 'number'" class='col-sm-9'>
                             <input style="width: 100%;" class="form-control wi-form-control"
