update maker manager

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -189,7 +189,7 @@ input[required] {
 // 	width: 4.5em;
 // }
 .selected {
-	background-color: #C8C9D0 !important;
+	background-color: #C8C9D0;
 }
 .table {
 	font-size: 12px;
